[package]
name = "ActixWebCarService"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
serde = {version = "^1", features = ["derive"]}
strum_macros = "^0.24"
strum = {version = "0.24", features = ["derive"]}
derive_more = "^0.99"
rand = "0.8"
actix-web-validator = "5.0.1"
validator = { version = "0.16", features = ["derive"] }
vin = "1.0.0"
log = "0.4.0" 
env_logger = "0.8.4"
chrono = "0.4"
